# Audio-Analysis-App

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  README.md  main.py  pyproject.toml  training_config.example.yml
.github/workflows/: pre-commit.yml
docker/: development.dockerfile  training.dockerfile
src/AI_dio/: inference.py
src/AI_dio/UI/: audio_info.py  controls.py  header.py  model_info.py  plot_area.py  sound_app.py  worker_audio.py
src/AI_dio/UI/styles/: gui_styles.qss
src/AI_dio/audio/: audio_file_reader.py  microphone_input.py
src/AI_dio/cli/: app.py
src/AI_dio/data_preprocessing/: audio_utils.py  augmentations.py  build_manifest.py  cache_features_memmap.py  dataset.py  features.py  sources.py
src/AI_dio/training/: checkpoints.py  common.py  metrics.py  models.py  pipeline.py  train.py
tests/: test_audio_file_reader.py  test_microphone_input.py
